refactoring rename CookBookViewModel

--- a/CookBook/Web.BlazorCore/Web.BlazorCore.Client/Pages/CookBook/Components/AddNewRecipe.razor
+++ b/CookBook/Web.BlazorCore/Web.BlazorCore.Client/Pages/CookBook/Components/AddNewRecipe.razor
@@ -1,6 +1,6 @@
 ﻿@page "/cookbook/recipes/add"
 @using Web.Shared.Models
-@inherits MvvmConponentBase<CookBookViewModel>
+@inherits MvvmConponentBase<AddRecipePageViewModel>
 @rendermode InteractiveAuto
 
 
