--- a/CookBook/Web.BlazorCore/Web.BlazorCore/Components/_Imports.razor
+++ b/CookBook/Web.BlazorCore/Web.BlazorCore/Components/_Imports.razor
@@ -9,4 +9,8 @@
 @using Web.BlazorCore
 @using Web.BlazorCore.Client
 @using Web.BlazorCore.Components
+@using Web.Shared.Components
+@using Web.Shared.ViewModels
 @using Web.BlazorCore.Components.Layout.Navigation
+@using Web.Components.Components.Loading
+@using Web.Components.Components.Labels
