--- a/CookBook/Web.BlazorCore/Web.BlazorCore/Components/_Imports.razor
+++ b/CookBook/Web.BlazorCore/Web.BlazorCore/Components/_Imports.razor
@@ -10,7 +10,7 @@
 @using Web.BlazorCore.Client
 @using Web.BlazorCore.Components
 @using Web.Shared.Components
-@using Web.Shared.ViewModels
+@using Web.Shared.ViewModels.Cookbook
 @using Web.BlazorCore.Components.Layout.Navigation
 @using Web.Components.Components.Loading
 @using Web.Components.Components.Labels
