--- a/CookBook/Web.BlazorCore/Web.BlazorCore.Client/_Imports.razor
+++ b/CookBook/Web.BlazorCore/Web.BlazorCore.Client/_Imports.razor
@@ -12,3 +12,4 @@
 @using Web.Components.Components.Input
 @using Web.Components.Components.Loading
 @using Web.Components.Components.Labels
+@using Web.BlazorCore.Client.Pages.CookBook.Components
