--- a/CookBook/Web.Components/Components/Input/ImageSelector.razor
+++ b/CookBook/Web.Components/Components/Input/ImageSelector.razor
@@ -1,17 +1,17 @@
 ﻿@using Microsoft.AspNetCore.Components.Forms
-<div class="card d-flex justify-content-center align-items-center rounded-circle recipe-img-card">
-    <div class="card-body d-flex justify-content-center align-items-center m-1 h-100">   
-            <InputFile id="@Id"
-                       type="file"
-                       asp-for="@ImgSource"
-                       hidden
-                       OnChange="@OnFileSelect"
-                       class="form-control" />
-            <img id="recipe-preview-img"
-                 class="img-fluid rounded-circle fs-6"
-                 src="@ImgSource"
-                 alt="@Label"
-                 @onclick="HandleImgClicked" />
+<div class="card d-flex justify-content-center align-items-center rounded-circle recipe-img-card h-100 w-100">
+    <div class="card-body h-100 w-100">
+        <InputFile id="@Id"
+                   type="file"
+                   asp-for="@ImgSource"
+                   hidden
+                   OnChange="@OnFileSelect"
+                   class="form-control" />
+        <img id="recipe-preview-img"
+             class="img-fluid rounded-circle h-100 w-100"
+             src="@ImgSource"
+             alt="@Label"
+             @onclick="HandleImgClicked" />
     </div>
 </div>
 
