--- a/CookBook/Web.BlazorCore/Web.BlazorCore/wwwroot/css/cookbook.css
+++ b/CookBook/Web.BlazorCore/Web.BlazorCore/wwwroot/css/cookbook.css
@@ -1,14 +1,26 @@
 .recipe-img-card {
-  min-height: 200px !important;
-  height: 200px !important;
-  max-height: 200px !important;
-  min-width: 200px !important;
-  width: 200px !important;
-  max-width: 200px !important;
+  min-height: 250px !important;
+  max-height: 250px !important;
+  min-width: 250px !important;
+  max-width: 250px !important;
 }
 
 .recipe-img-card img:hover {
   cursor: pointer;
-  scale: 1.3;
+  scale: 1.2;
   transition: all 0.2s ease-in-out;
+}
+
+.recipe-preview-img {
+  height: 100%;
+  width: 100%;
+}
+
+.recipe-list-group-item {
+  width: 100 .recipe-list-group-item !important;
+}
+
+.recipe-list-group-item:hover {
+  cursor: pointer !important;
+  background-color: #e6e6e6 !important;
 }
