--- a/CookBook/Web.BlazorCore/Web.BlazorCore/wwwroot/css/cookbook.css
+++ b/CookBook/Web.BlazorCore/Web.BlazorCore/wwwroot/css/cookbook.css
@@ -12,8 +12,10 @@
 }
 
 .recipe-preview-img {
-  height: 100%;
-  width: 100%;
+  min-height: 250px !important;
+  max-height: 250px !important;
+  min-width: 250px !important;
+  max-width: 250px !important;
 }
 
 .recipe-list-group-item {
