clean up, style add recipe img

--- a/CookBook/Web.BlazorCore/Web.BlazorCore.Client/Pages/CookBook/Pages/RecipeManagement.razor
+++ b/CookBook/Web.BlazorCore/Web.BlazorCore.Client/Pages/CookBook/Pages/RecipeManagement.razor
@@ -47,4 +47,9 @@
             </ul>
         </div>
     </section>
+    @if (ViewModel.IsLoading == true)
+    {
+        <LoadingIndicator Label="Loading" />
+
+    }
 </div>
