--- a/CookBook/Web.BlazorCore/Web.BlazorCore.Client/_Imports.razor
+++ b/CookBook/Web.BlazorCore/Web.BlazorCore.Client/_Imports.razor
@@ -12,4 +12,5 @@
 @using Web.Components.Components.Input
 @using Web.Components.Components.Loading
 @using Web.Components.Components.Labels
+@using Web.BlazorCore.Client.Pages.CookBook.Pages
 @using Web.BlazorCore.Client.Pages.CookBook.Components
