--- a/CookBook/Web.Components/Components/Input/ImageSelector.razor
+++ b/CookBook/Web.Components/Components/Input/ImageSelector.razor
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Components.Forms
 <div class="card d-flex justify-content-center align-items-center rounded-circle recipe-img-card h-100 w-100">
-    <div class="card-body text-center h-100 w-100">
+    <div class="card-body text-center h-100 w-100 img-card">
         <InputFile id="@Id"
                    type="file"
                    asp-for="@ImgSource"
