--- a/CookBook/Web.BlazorCore/Web.BlazorCore.Client/Pages/CookBook/Pages/AddNewRecipe.razor
+++ b/CookBook/Web.BlazorCore/Web.BlazorCore.Client/Pages/CookBook/Pages/AddNewRecipe.razor
@@ -12,7 +12,7 @@
                 <div class="col-md-6 flex-column">
                     <div class="row mt-4">
                         <div class="container d-flex justify-content-center align-items-center h-100">
-                            <div class="col-md-12 d-flex justify-content-center mt-3">
+                            <div class="col-md-12 d-flex justify-content-center mt-">
                                 <ImageSelector Id="recipe-img"
                                                ImgSource="@ViewModel.ImgSrc"
                                                Label="Bild"
