--- a/CookBook/Web.BlazorCore/Web.BlazorCore/Components/Pages/CookBook.razor
+++ b/CookBook/Web.BlazorCore/Web.BlazorCore/Components/Pages/CookBook.razor
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    @if (_vm.IsLoading)
+    @if (ViewModel.IsLoading)
     {
         <LoadingIndicator Label="Loading" />
     }
